@@ -8,7 +8,7 @@
     <version>1.4-jdk20-SNAPSHOT</version>
   </parent>
   <artifactId>docean</artifactId>
-  <version>1.4-jdk20-SNAPSHOT</version>
+  <version>1.4-jdk21-SNAPSHOT</version>
   <properties>
     <netty.version>4.1.97.Final</netty.version>
   </properties>
@@ -16,7 +16,7 @@
     <dependency>
       <groupId>run.mone</groupId>
       <artifactId>easy</artifactId>
-      <version>1.4-jdk20-SNAPSHOT</version>
+      <version>1.4-jdk21-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>cglib</groupId>
@@ -58,12 +58,11 @@
         <version>3.11.0</version>
         <configuration>
           <compilerArgs>
-            <arg>--add-modules=jdk.incubator.concurrent</arg>
             <arg>--enable-preview</arg>
           </compilerArgs>
-          <compilerVersion>20</compilerVersion>
-          <source>20</source>
-          <target>20</target>
+          <compilerVersion>21</compilerVersion>
+          <source>21</source>
+          <target>21</target>
         </configuration>
       </plugin>
     </plugins>
